# tauri-react

./: .gitignore  Taskfile.yml  eslint.config.ts  index.html  m.rs  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.css  App.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20251212063756_init.sql  20260106172229_add_unique_index_on_performers_name.sql
src-tauri/src/: db.rs  dir.rs  ffmpeg.rs  ffprobe.rs  fs.rs  lib.rs  main.rs  performers.rs  players.rs  studios.rs  tags.rs  tracks.rs  utils.rs  video.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/blob/: mod.rs  repo.rs  service.rs
src-tauri/src/app/performer/: db.rs  dto.rs  mod.rs  repo.rs  service.rs  vo.rs
src-tauri/src/app/studio/: db.rs  dto.rs  mod.rs  repo.rs  service.rs  vo.rs
src-tauri/src/app/tag/: convert.rs  db.rs  dto.rs  mod.rs  model.rs  repo.rs  service.rs  vo.rs
src-tauri/src/app/video/: dto.rs  mod.rs  service.rs  vo.rs
src-tauri/src/blob/: fs.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/common/: file.rs  mod.rs
src-tauri/src/commands/hyp/: mod.rs  performer.rs  scenes.rs  studio.rs  tags.rs
src-tauri/src/commands/music_player/: album.rs  artist.rs  db.rs  mod.rs  player.rs  playlist.rs  tracks.rs
src-tauri/src/commands/video/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/hyp/: mod.rs  performer.rs  scenes.rs  studio.rs  tag.rs  video.rs
src-tauri/src/fsutil/: dir.rs  mod.rs
src-tauri/src/infra/: dir.rs  ffmpeg.rs  ffprobe.rs  mod.rs
src-tauri/src/sql/: init.sql
(+127 files in other folders)
