[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
parking_lot = "0.12.4"
rodio = { version = "0.20.1", default-features = false, features = [
    "symphonia-all",
] }
symphonia = { version = "0.5.4", features = ["all"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
walkdir = "2"
serde_with = "3.14.1"
blake3 = "1.8.2"
infer = "0.15.0"
shared_child = "1.0.0"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }

futures = "0.3"

log = { version = "0.4", features = ["kv"] }
env_logger = "0.11"
base64 = "0.21"
md5 = "0.7"
sha2 = "0.10"   # 不需要加 hex feature
hex  = "0.4"
validator = { version = "0.18", features = ["derive"] }
ts-rs = "11.1"
